--- a/webapi.yaml
+++ b/webapi.yaml
@@ -878,6 +878,7 @@ paths:
                   type: string
                   format: date-time
                   description: UTC time ex. 2024-06-05T04:33:08.010Z | 2024-06-05T13:33:08.010+09:00
+                  x-recommended: true
                 timezone:
                   type: string
                   description: set timezone. ex. +9 | -9.5 | Asia/Tokyo
