--- a/webapi.yaml
+++ b/webapi.yaml
@@ -929,7 +929,7 @@ paths:
                     format: date-time
               example:
                 registration: "Success"
-                name: "2024-06-05T13:33:08.jpg"
+                name: "20240605T133308.jpg"
                 time: "2024-06-05T13:33:08.010+09:00"
         '400':
           description: Bad Request. Incorect request.
