--- a/webapi.yaml
+++ b/webapi.yaml
@@ -574,6 +574,9 @@ paths:
           application/json:
             schema:
               type: object
+              required:
+                - end_device_ids
+                - uplink_message
               properties:
                 end_device_ids:
                   type: object
@@ -605,6 +608,10 @@ paths:
                   format: date-time
                 uplink_message:
                   type: object
+                  required:
+                    - received_at
+                    - decoded_payload
+                    - rx_metadata
                   properties:
                     session_key_id:
                       type: string
@@ -633,9 +640,15 @@ paths:
                       type: array
                       items:
                         type: object
+                        required:
+                          - gateway_ids
+                          - rssi
                         properties:
                           gateway_ids:
                             type: object
+                            required:
+                              - gateway_id
+                              - eui
                             properties:
                               gateway_id:
                                 type: string
